# cybwaydb

./: .gitignore  BACKLOG.md  BENCHMARKS.md  CLAUDE.md  LEGAL.md  MAINTENANCE.md  NOTICE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.html
docs/evidence/: README.md
docs/evidence/live-run/: audit.log.jsonl  live_benchmark.json  manifest.json
src/cybwaydb/: __init__.py  agents.py  auditlog.py  budget.py  cli.py  controls.py  drift.py  engine.py  evalbench.py  gate.py  livedemo.py  patchwatch.py  providers.py  redteam.py  report.py  rules.py  synthdb.py
tests/: test_ai_layer.py  test_cli_db.py  test_core.py  test_drift.py  test_livedemo.py  test_patchwatch.py  test_report.py  test_risk_acceptance.py
