[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cybwaydb"
version = "0.1.0"
description = "Cybwaydb - open-source, governed-AI database compliance auditor (mock-first, defensive-only)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "V. Vikram" }]
keywords = ["database", "compliance", "STIG", "NIST", "audit", "AI governance"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
# Core runtime is stdlib-only by design (cost control + supply-chain minimalism).
dependencies = []

[project.optional-dependencies]
dev = ["pytest==8.2.2"]

[project.scripts]
cybwaydb = "cybwaydb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
